--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "author": "John Doe",
+  "author": "Dakumisu",
   "license": "ISC",
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "dev": "webpack serve --config ./bundler/webpack.dev.js",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -33,12 +34,18 @@
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
+    "bezier-easing": "^2.1.0",
+    "fast-random": "^2.0.4",
+    "glsl-easings": "^1.0.0",
+    "glsl-noise": "^0.0.0",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
+    "meshoptimizer": "^0.17.0",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.35.1",
     "sass-loader": "^11.1.1",
+    "vercel": "^23.1.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.6.0"
   }
