--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Dakumisu",
   "license": "ISC",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js",
+    "build": "webpack --config ./bundler/webpack.prod.js --node-env=production",
+    "dev": "webpack serve --config ./bundler/webpack.dev.js --node-env=development",
     "deploy": "vercel --prod"
   },
   "dependencies": {
@@ -42,12 +42,13 @@
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
+    "ifdef-loader": "^2.3.2",
     "meshoptimizer": "^0.17.0",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.35.1",
     "sass-loader": "^11.1.1",
     "vercel": "^23.1.2",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.6.0"
+    "webpack": "^5.26.2",
+    "webpack-cli": "^4.9.1"
   }
 }
