--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@waaark/luge": "^0.6.2-beta",
+    "animejs": "^3.2.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
@@ -21,7 +22,6 @@
     "file-loader": "^6.2.0",
     "glslify": "^7.1.1",
     "glslify-loader": "^2.0.0",
-    "gsap": "^3.6.1",
     "howler": "^2.2.1",
     "html-loader": "^1.3.2",
     "portfinder-sync": "0.0.2",
