--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "glslify-deps": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
     "ifdef-loader": "^2.3.2",
-    "lil-gui": "^0.15.0",
     "meshoptimizer": "^0.17.0",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.35.1",
     "sass-loader": "^11.1.1",
     "stats-js": "^1.0.1",
+    "tweakpane": "^3.0.7",
     "vercel": "^23.1.2",
     "webpack": "^5.26.2",
     "webpack-cli": "^4.9.1"
