--- a/package.json
+++ b/package.json
@@ -1,55 +1,33 @@
 {
   "name": "beesly",
   "version": "1.0.0",
-  "description": "",
+  "description": "Three.js starter - Beesly 🍜",
   "main": "app.js",
   "author": "Dakumisu",
   "license": "ISC",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js --node-env=production",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js --node-env=development",
+    "dev": "vite -m development --host -c config/vite.config.js",
+    "build": "vite -m production build -c config/vite.config.js",
+    "preview": "vite preview -c config/vite.config.js",
     "deploy": "vercel --prod"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "@waaark/luge": "^0.6.2-beta",
     "animejs": "^3.2.1",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "glslify": "^7.1.1",
-    "glslify-loader": "^2.0.0",
     "howler": "^2.2.1",
-    "html-loader": "^1.3.2",
-    "portfinder-sync": "0.0.2",
-    "postprocessing": "^6.20.3",
-    "raw-loader": "^4.0.2",
-    "shader": "^1.0.0",
-    "style-loader": "^2.0.0",
-    "three": "^0.125.1",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "three": "^0.125.1"
   },
   "devDependencies": {
     "bezier-easing": "^2.1.0",
     "fast-random": "^2.0.4",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "^0.0.0",
-    "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.2",
-    "html-webpack-plugin": "^5.3.2",
-    "ifdef-loader": "^2.3.2",
     "meshoptimizer": "^0.17.0",
-    "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.35.1",
-    "sass-loader": "^11.1.1",
     "stats-js": "^1.0.1",
     "tweakpane": "^3.0.7",
     "vercel": "^23.1.2",
-    "webpack": "^5.26.2",
-    "webpack-cli": "^4.9.1"
+    "vite": "^2.7.13",
+    "vite-plugin-glsl": "^0.0.8"
   }
 }
