--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "dev": "vite -m development -c config/vite.config.js",
     "build": "vite build -m production -c config/vite.config.js",
-    "staging": "vite build -m staging -c config/vite.config.js",
-    "preview": "vite preview -c config/vite.config.js"
+    "staging": "vite build -m staging -c config/vite.config.js"
   },
   "dependencies": {
     "@waaark/luge": "^0.6.2-beta",
