--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "staging": "vite build -m staging -c config/vite.config.js"
   },
   "dependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@waaark/luge": "^0.6.2-beta",
     "animejs": "^3.2.1",
     "detect-gpu": "^4.0.7",
