--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "bezier-easing": "^2.1.0",
+    "esbuild": "^0.14.23",
     "fast-random": "^2.0.4",
     "meshoptimizer": "^0.17.0",
     "sass": "^1.35.1",
