--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,6 +18,10 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@webgl/*": ["src/js/Webgl/*"],
+      "@dom/*": ["src/js/Dom/*"],
+      "@tools/*": ["src/js/Tools/*"],
+
       "@js/*": ["src/js/*"],
       "@json/*": ["src/json/*"],
       "@scss/*": ["src/scss/*"],
