--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "detect-gpu": "^4.0.7",
     "howler": "^2.2.1",
     "philbin-packages": "^1.0.16",
+    "signal-js": "^3.0.1",
     "three": "^0.125.1"
   },
   "devDependencies": {
